--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,15 @@
             <plugin>
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
-                <version>LATEST</version>
+                <version>1.3.0</version>
+                <configuration>
+                    <targetClasses>
+                        <param>TeamSalaryCalculator</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>TeamSalaryCalculatorTest</param>
+                    </targetTests>
+                </configuration>
             </plugin>
         </plugins>
     </build>
